2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Linux/Interop.Linux.stat.cs:
	* Interop/Linux/Interop.Linux.types.cs:
	  Implemented Linux's stat(2).

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Interop/Linux/Interop.Linux.types.cs:
	* Interop/Linux/Interop.Linux.statfs.cs:
	  Add statfs(2) f_flags enumeration.

2015-05-03  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Linux/Interop.Linux.types.cs:
	* Interop/Linux/Interop.Linux.statfs.cs:
	  Implement Linux statfs(2).

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Linux/Interop.Linux.xattr.cs:
	  Implement Linux's listxattr(2), getxattr(2), setxattr(2),
	  removexattr(2)

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.statfs.cs:
	  Correct documentation.

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Interop/Linux/Interop.Linux.uname.cs:
	  Un-hardcode library name.

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.xattr.cs:
	  Correct typos.

2015-04-26  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Apple/Interop.Apple.types.cs:
	* Interop/Apple/Interop.Apple.statfs.cs:
	  Implement statfs(2) and statfs64(2).

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.xattr.cs:
	  Corrected typo.

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.xattr.cs:
	  Added overlaying system calls.

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.stat.cs:
	* Interop/Linux/Interop.Linux.uname.cs:
	* Interop/Apple/Interop.Apple.uname.cs:
	* Interop/Apple/Interop.Apple.getattrlist.cs:
	  Added return values to documentation.

2015-04-25  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Apple/Interop.Apple.xattr.cs:
	  Implemented Mac OS X getxattr(2), setxattr(2),